Add /ship endpoint
Add endpoint which adds ships to battlefield.
Ships can be placed once, cant be place over and near
each other.
Update docs and tests.
